Page MenuHome GnuPG

stop shipping *.skel files
Closed, ResolvedPublic

Description

I propose that GnuPG stop shipping the .skel files (dirmngr.conf and gpg.conf), and stop installing them.

Ideally, GnuPG should work fine for the simple case with nothing in these configuration files in the user's GnuPG homedir.

Indeed, the currently-shipped gpg-conf.skel and dirmngr-conf.skel files are all empty -- all the text in them is commented out. So they're currently basically documentation.

If those files are copied into ~/.gnupg/ the first time the user runs gpg, then they simply get out of date once gpg is upgraded (because the new versions aren't copied over). If they're documentation, they should ship *as* documentation, not as conf files that are likely to become stale once installed by the user.

Revisions and Commits

Related Objects

Event Timeline

dkg created this object in space S1 Public.

I've just pushed a branch dkg/no-skel-files which implements this change.

gniibe triaged this task as Normal priority.
gniibe added projects: gnupg (gpg21), In Progress.
gniibe added a subscriber: gniibe.

Applied to master (formatting the commit log), and pushed.

Fixed in 2.1.21.